--- a/src/components/atoms/DetailsCard/DetailsCard.module.css
+++ b/src/components/atoms/DetailsCard/DetailsCard.module.css
@@ -5,6 +5,7 @@
   border-radius: var(--border-radius-default);
   width: 100%;
   padding: 32px 0;
+  box-shadow: 5px 5px 50px rgba(0, 0, 0, 0.25);
 
   @media (max-width: 768px) {
     flex-direction: column;
